projects/styles.css
body {
    display: flex;
    flex-direction: column;
    background-color: black;
    color: white;
    font-family: "Libre Franklin", san-serif;
    padding: 0 1rem;
    /* Following style is so footer goes down for shorter project writeups */
    min-height: 98.5vh; 
}

header {
    position: relative;
}

.header-container {
    margin: 1rem 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-container a,
.header-container a:visited, 
.header-container a:active  {
    text-decoration: none;
    color: white;
}

.name {
    font-size: 1rem;
    font-weight: normal;
    margin: 0;
}

#checkbox {
    display: none;
}

.hamburger {
    border: none;
    color: white;
    background: local;
}

.navigation {
    background-color: rgb(84, 83, 83);
    flex-direction: column;
    position: absolute;
    top: 100%;
    right: 0;
    display: flex;
    opacity: .9;
    pointer-events: none;
    transition: max-height 0.5s ease;
    overflow: hidden;
    box-sizing: border-box;
    gap: .5rem;
    max-height: 0;
}

#checkbox:checked ~ .navigation {
    pointer-events: auto;
    max-height: 300px;
} 


.navigation a {
    text-decoration: none;
    padding: .5rem 1rem;
    color: white;
}

/* Writeup Section */
hr {
    width: 100%;
}

a,
a:visited,
a:active {
    text-decoration: underline;
    display: inline;
    color: #ffd541
}

figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

figure img {
    max-width: 100%;
    margin: 0 auto;
}

figcaption {
    font-style: italic;
    text-align: center;
}

/* References section */
.references li{
    margin-bottom: 1rem;
    overflow-wrap: break-word; 
}

/* Writeup section */
iframe {
    width: 100%;       /* Full width of parent container */
    aspect-ratio: 16/11;
    max-width: 500px;
    border-radius: 12px;
    box-shadow: 0 0 16px rgba(255, 255, 255, 0.2);
    margin: 0 auto;
}

/* Footer section */
footer {
    font-size: .5rem;
    color: rgba(229, 229, 229, 0.74);
    padding-top: 10vh;
    margin-top: auto;
}


/* Desktop View */
@media (min-width: 768px) {
    body {
        padding: 0 3rem;
        min-height: 97.5vh; /* Pushes footer down */
    }

    /* Header changes */
    .header-container {
        margin: 1rem 0;
    }

    .hamburger {
        display: none;
    }

    .navigation {
        max-height: 300px;
        position: relative;
        flex-direction: row;
        opacity: 1;
        pointer-events: auto;
        background-color: transparent;
    }

    .navigation a {
        text-decoration: none;
        color: white;
        margin-left: 2rem;
        padding: 0;
    }

    /* Projects changes */
    img {
        max-height: 45vh;
    }

    .r-chart {
        max-height: 65vh;
    }

}

